--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
   </head>
 
   <body>
-    <div class="scores"><a href="highscores.html">View Highscores</a></div>
+    <div class="scores"><a href="highscores.html">Highscores</a></div>
 
     <div class="timer">Time: <span id="time">0</span></div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
-        <h1>Coding Quiz Challenge</h1>
+        <h1>Answer My Riddles:</h1>
         <p>
-          Try to answer the following code-related questions within the time
-          limit. Keep in mind that incorrect answers will penalize your
-          score/time by ten seconds!
+          Try to answer the following riddles correctly for a highscore
         </p>
-        <button id="start">Start Quiz</button>
+        <button id="start">Start Game</button>
       </div>
 
-      <div id="questions" class="hide">
-        <h2 id="question-title"></h2>
+      <div id="riddles" class="hide">
+        <h2 id="riddles-title"></h2>
         <div id="choices" class="choices"></div>
       </div>
 
@@ -41,7 +39,7 @@
       <div id="feedback" class="feedback hide"></div>
     </div>
 
-    <script src="./assets/js/questions.js"></script>
+    <script src="./assets/js/riddles.js"></script>
     <script src="./assets/js/logic.js"></script>
   </body>
 </html>
